# pachy

./: .gitignore  LICENSE  Makefile  README.md  com.github.leggettc18.pachy.yml  meson.build
.github/workflows/: main.yml
build-aux/: com.github.leggettc18.pachy.Devel.yml
data/: app.css  meson.build  pachy.desktop.in  pachy.gresource.xml  pachy.gschema.xml  pachy.metainfo.xml.in
internal/: meson.build
internal/Widgets/: Avatar.vala  ButtonContent.vala  LabelWithWidgets.vala  meson.build
po/: com.github.leggettc18.pachy.pot  es.po  meson.build
po/extra/: POTFILES  es.po  extra.pot
src/: Application.vala  Config.vala.in  MainWindow.vala  Settings.vala  meson.build
src/API/: Account.vala  AccountHolder.vala  Emoji.vala  EmojiReaction.vala  Entity.vala  Mention.vala  Place.vala  Status.vala  Visibility.vala  Widgetizable.vala  meson.build
src/Dialogs/: Authentication.vala  NewAccount.vala  meson.build
src/Services/: Mastodon.vala  meson.build
src/Services/Accounts/: AccountStore.vala  InstanceAccount.vala  SecretAccountStore.vala  meson.build
src/Services/Accounts/Mastodon/: Account.vala  meson.build
src/Services/Cache/: AbstractCache.vala  EntityCache.vala  ImageCache.vala  meson.build
src/Services/Network/: Network.vala  Request.vala  Streamable.vala  Streams.vala  meson.build
src/Utils/: DateTime.vala  Host.vala  Html.vala  Units.vala  meson.build
src/Views/: Base.vala  ContentBase.vala  Home.vala  Main.vala  Sidebar.vala  TabbedBase.vala  Timeline.vala  meson.build
src/Widgets/: AccountRow.vala  ActionsRow.vala  Avatar.vala  Emoji.vala  EmojiLabel.vala  ItemRow.vala  MarkupView.vala  ReactionsRow.vala  RichLabel.vala  Status.vala  StatusActionButton.vala  meson.build
vapi/: build.vapi
